docs/api/qiskit-ibm-runtime/0.21/options-estimator-options.mdx
---
title: EstimatorOptions (v0.21)
description: API reference for qiskit_ibm_runtime.options.EstimatorOptions in qiskit-ibm-runtime v0.21
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.EstimatorOptions
---

# EstimatorOptions

<Class id="qiskit_ibm_runtime.options.EstimatorOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/options/estimator_options.py#L35-L125" signature="EstimatorOptions(*args, **kwargs)" modifiers="class">
  Options for V2 Estimator.

  **Parameters**

  *   **default\_precision** – The default precision to use for any PUB or `run()` call that does not specify one. Each estimator pub can specify its own precision. If the `run()` method is given a precision, then that value is used for all PUBs in the `run()` call that do not specify their own. Default: 0.015625 (1 / sqrt(4096).

  *   **default\_shots** –

      The total number of shots to use per circuit per configuration.

        <Admonition title="Note" type="note">
          If set, this value overrides [`default_precision`](#qiskit_ibm_runtime.options.EstimatorOptions.default_precision "qiskit_ibm_runtime.options.EstimatorOptions.default_precision").
        </Admonition>

      A configuration is a combination of a specific parameter value binding set and a physical measurement basis. A physical measurement basis groups together some collection of qubit-wise commuting observables for some specific circuit/parameter value set to create a single measurement with basis rotations that is inserted into hardware executions.

      If twirling is enabled, the value of this option will be divided over circuit, randomizations, with a smaller number of shots per randomization. See the [`twirling`](#qiskit_ibm_runtime.options.EstimatorOptions.twirling "qiskit_ibm_runtime.options.EstimatorOptions.twirling") options.

      Default: `None`.

  *   **optimization\_level** –

      How much optimization to perform on the circuits. Higher levels generate more optimized circuits, at the expense of longer processing times.

      *   0: no optimization
      *   1: light optimization

      Refer to the [Configure runtime compilation for Qiskit Runtime](/docs/run/configure-runtime-compilation). for more information about the optimization levels.

      Default: 1.

  *   **resilience\_level** –

      How much resilience to build against errors. Higher levels generate more accurate results, at the expense of longer processing times.

      *   0: No mitigation.
      *   1: Minimal mitigation costs. Mitigate error associated with readout errors.
      *   2: Medium mitigation costs. Typically reduces bias in estimators but is not guaranteed to be zero bias.

      Refer to the [Configure error mitigation for Qiskit Runtime](/docs/run/configure-error-mitigation). for more information about the error mitigation methods used at each level.

      Default: 1.

  *   **seed\_estimator** – Seed used to control sampling.

  *   **dynamical\_decoupling** – Suboptions for dynamical decoupling. See [`DynamicalDecouplingOptions`](options-dynamical-decoupling-options "qiskit_ibm_runtime.options.DynamicalDecouplingOptions") for all available options.

  *   **resilience** – Advanced resilience options to fine tune the resilience strategy. See [`ResilienceOptionsV2`](options-resilience-options-v2 "qiskit_ibm_runtime.options.ResilienceOptionsV2") for all available options.

  *   **execution** – Execution time options. See [`ExecutionOptionsV2`](options-execution-options-v2 "qiskit_ibm_runtime.options.ExecutionOptionsV2") for all available options.

  *   **twirling** – Pauli twirling options. See [`TwirlingOptions`](options-twirling-options "qiskit_ibm_runtime.options.TwirlingOptions") for all available options.

  *   **experimental** – Experimental options.

  ## Attributes

  ### default\_precision

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.default_precision" attributeTypeHint="UnsetType | float" attributeValue="Unset" />

  ### default\_shots

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.default_shots" attributeTypeHint="UnsetType | int | None" attributeValue="Unset" />

  ### dynamical\_decoupling

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.dynamical_decoupling" attributeTypeHint="DynamicalDecouplingOptions | Dict" attributeValue="FieldInfo(annotation=Union[DynamicalDecouplingOptions, Dict], required=False, default_factory=DynamicalDecouplingOptions)" />

  ### environment

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.environment" attributeTypeHint="EnvironmentOptions | Dict" attributeValue="FieldInfo(annotation=Union[EnvironmentOptions, Dict], required=False, default_factory=EnvironmentOptions)" />

  ### execution

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.execution" attributeTypeHint="ExecutionOptionsV2 | Dict" attributeValue="FieldInfo(annotation=Union[ExecutionOptionsV2, Dict], required=False, default_factory=ExecutionOptionsV2)" />

  ### experimental

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.experimental" attributeTypeHint="UnsetType | dict" attributeValue="Unset" />

  ### max\_execution\_time

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.max_execution_time" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### optimization\_level

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.optimization_level" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### resilience

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.resilience" attributeTypeHint="ResilienceOptionsV2 | Dict" attributeValue="FieldInfo(annotation=Union[ResilienceOptionsV2, Dict], required=False, default_factory=ResilienceOptionsV2)" />

  ### resilience\_level

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.resilience_level" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### seed\_estimator

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.seed_estimator" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### simulator

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.simulator" attributeTypeHint="SimulatorOptions | Dict" attributeValue="FieldInfo(annotation=Union[SimulatorOptions, Dict], required=False, default_factory=SimulatorOptions)" />

  ### twirling

  <Attribute id="qiskit_ibm_runtime.options.EstimatorOptions.twirling" attributeTypeHint="TwirlingOptions | Dict" attributeValue="FieldInfo(annotation=Union[TwirlingOptions, Dict], required=False, default_factory=TwirlingOptions)" />

  ## Methods

  ### update

  <Function id="qiskit_ibm_runtime.options.EstimatorOptions.update" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/options/options.py#L106-L111" signature="update(**kwargs)">
    Update the options.

    **Return type**

    `None`
  </Function>
</Class>

